--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
-# 应用名称
+# \u5E94\u7528\u540D\u79F0
 spring.application.name=zeng-rpc-springboot
-# 应用服务 WEB 访问端口
+# \u5E94\u7528\u670D\u52A1 WEB \u8BBF\u95EE\u7AEF\u53E3
 server.port=8080
+
+spring.datasource.url=jdbc:mysql://121.43.39.136:3306/zeng?serverTimezone=GMT%2B8&useSSL=false
+spring.datasource.username=zyt
+spring.datasource.password=zyt
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis.typeAliasesPackage=com/rpc/zeng/common/monitor/RpcMonitor.java
+mybatis.mapperLocations=classpath:mapper/*.xml
 
 
